# g-agent

./: .gitignore  Cargo.toml  README.md  config.example.json  install.sh  package.json  pnpm-lock.yaml
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
apps/tui/: Cargo.toml  UI_SPEC.md  package.json  tsconfig.json
apps/tui/src/: App.tsx  cli.tsx  config.rs  main.rs  protocol.rs  server.rs  session.rs
apps/tui/src/agent/: client.rs
apps/tui/src/benchmark/: fakeWebSocket.ts  metrics.ts  run.ts
apps/tui/src/components/: BlinkingCursor.tsx  ChatInput.tsx  LoadingSpinner.tsx  MessageContent.tsx  MessageLine.tsx  StatusBar.tsx  VirtualTranscript.tsx
apps/tui/src/hooks/: useAgentSocket.ts  useVirtualScroll.ts
apps/tui/src/lib/: clipboard.ts  contentHash.ts  heightCache.ts  inputFocus.ts  lineWidth.ts  logOutput.ts  mouseInput.ts  performance.test.ts  serverBootstrap.ts  sessionStore.ts  streamRender.ts  streamingMarkdown.ts  terminalInput.test.ts  terminalInput.ts  transcript.ts  virtualScroll.ts
apps/tui/src/ui/: app.rs  composer.rs  markdown.rs  mod.rs  paste.rs  spinner.rs  status.rs  textarea.rs  theme.rs  transcript.rs
docs/: terminal-performance-todo.md
scripts/: dev.sh  init-config.sh
